Fix navigation styles and collapsed state. Add links to inactive buttons.

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -1,9 +1,7 @@
 .navbarFlex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding-left: 2rem;
   padding-right: 2rem;
+  transition: 300ms ease-in-out all;
 }
 
 .navbarBrand {
